2009-05-19  lav

	* highli.cc: don't interpret \b

2009-05-18  lav

	* screen.cc, color.h: fixes for syntax4.
	* color.cc: fixed default syntax4 color.

2009-05-15  lav

	* highli.cc: handle s without a subex number.
	* color.cc, color.h, options.cc: add syntax4 color.

2008-12-25  lav

	* highli.cc: fixed free_chain; handle \r; ignore s-lines in ignored sections.

2008-12-22  lav

	* highli.cc, highli.h: add support for sub-text highlighting;
	  ignore spaces after trailing \ so that nice indentation is possible.

2008-10-25  lav

	* window.cc, window.h: add clip_x member; limit PutStr on it.

2008-10-24  lav

	* highli.cc, highli.h, user.cc: save and show syntax selector line.

2008-09-20  lav

	* loadsave.cc: set DosEol properly.
	* highli.cc: limit max text length to highlight; use the same
	  re_syntax_options for file type mapping.

2008-09-02  lav

	* calc.cc: add sum function.
	* inline.h, kern.cc, edit.h, textpoin.cc, textpoin.h: outline some
	  functions as suggested by gcc.
	* color.cc, colormnu.cc, edit.cc, file.cc, format.cc, highli.cc,
	  highli.h, keymap.cc, loadsave.cc, mb.h, options.cc, screen.cc,
	  search.cc, signals.cc, window.cc: fixed warnings; used gnulib;
	  dropped rx.h support.
	* regex.c, regex.h, wcwidth.c, wcwidth1.c: moved here to save
	  from gnulib-tool.

2008-08-11  lav

	* keymapdf.cc: add kri/kind terminfo keys to keymap.

2008-05-08  Raphael Geissert <atomo64@gmail.com>

	* getch.cc: Fix build problem related to KEY_F macro definition (closes: #223168).

2008-03-08  lav

	* edit.cc: fixed has_widechar for unsigned wchar_t.

2008-01-21  lav

	* block.cc: use MessageSync instead of Message+SyncTextWin (fixes
	  block prompt)

2008-01-10  lav

	* options.cc: allow tab size up to 99.
	* kern.cc: nicer PrevLine.
	* about.cc: update copyright.
	* menu1.cc: fix off-by-one.

2007-09-06  lav

	* calc.cc: recognize .123 as a number.
	* about.cc: update copyright year.

2007-08-08  lav

	* search.cc: do not match empty string.
