@@ -121,6 +121,8 @@ const color default_color_pal[]=
    {SYNTAX2,	  A_BOLD,     COLOR_CYAN,    COLOR_BLUE},
    {SYNTAX3,	  A_BOLD,     COLOR_GREEN,   COLOR_BLUE},
    {SYNTAX4,	  A_BOLD,     COLOR_MAGENTA, COLOR_BLUE},
+   {SYNTAX5,	  A_NORMAL,   COLOR_MAGENTA, COLOR_BLUE},
+   {SYNTAX6,	  A_NORMAL,   COLOR_YELLOW,  COLOR_BLUE},
    {HIGHLIGHT,	  A_BOLD,     COLOR_YELLOW,  COLOR_BLACK},
    {-1}
 };
@@ -142,6 +144,8 @@ const color default_bw_pal[]=
    {SYNTAX2,	  A_BOLD,	    NO_COLOR,NO_COLOR},
    {SYNTAX3,	  A_DIM,	    NO_COLOR,NO_COLOR},
    {SYNTAX4,	  A_DIM,	    NO_COLOR,NO_COLOR},
+   {SYNTAX5,	  A_DIM,	    NO_COLOR,NO_COLOR},
+   {SYNTAX6,	  A_UNDERLINE,	    NO_COLOR,NO_COLOR},
    {HIGHLIGHT,	  A_BOLD,	    NO_COLOR,NO_COLOR},
    {-1}
 };
